--- a/sub_service/programs/contract/Cargo.toml
+++ b/sub_service/programs/contract/Cargo.toml
@@ -18,3 +18,4 @@ default = []
 [dependencies]
 anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
 anchor-spl = "0.29.0"
+uuid = "1.10.0"
