feat: added my subscriptions, explore, and charts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,9 @@
   ],
   "include": [
     "**/*.ts",
-    "**/*.json"
+    "**/*.json",
+    "frontend/src/constants/columns/mySubscriptions.tsx",
+    "frontend/src/constants/columns/explore.tsx"
   ],
   "exclude": [
     "node_modules"
