--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,8 +29,10 @@
     "react-day-picker": "8.10.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.26.2",
+    "recharts": "^2.12.7",
     "tailwind-merge": "2.5.2",
     "tailwindcss-animate": "1.0.7",
+    "vite-plugin-svg": "^0.7.0",
     "vite-plugin-svgr": "4.2.0"
   },
   "devDependencies": {
