--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "solata-sub-service",
+  "name": "Sola",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -10,30 +10,40 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-icons": "1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "1.2.0",
+    "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-select": "2.1.1",
     "@radix-ui/react-slot": "1.1.0",
     "@radix-ui/react-switch": "1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "@solana/wallet-adapter-base": "0.9.23",
     "@solana/wallet-adapter-react": "0.15.35",
     "@solana/wallet-adapter-react-ui": "0.9.35",
-    "@solana/wallet-adapter-wallets": "0.19.32",
+    "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "1.95.3",
     "@tanstack/react-table": "8.20.5",
+    "buffer": "^6.0.3",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "date-fns": "4.1.0",
+    "immer": "^10.1.1",
     "lucide-react": "0.446.0",
     "react": "18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-router-dom": "6.26.2",
     "recharts": "^2.12.7",
     "tailwind-merge": "2.5.2",
     "tailwindcss-animate": "1.0.7",
+    "vite-plugin-node-polyfills": "^0.22.0",
     "vite-plugin-svg": "^0.7.0",
-    "vite-plugin-svgr": "4.2.0"
+    "vite-plugin-svgr": "4.2.0",
+    "zod": "^3.23.8",
+    "zustand": "5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/react": "18.3.3",
@@ -42,6 +52,8 @@
     "autoprefixer": "10.4.20",
     "postcss": "8.4.47",
     "tailwindcss": "3.4.13",
-    "vite": "5.4.1"
+    "vite": "5.4.1",
+    "vite-plugin-checker": "^0.8.0",
+    "vite-tsconfig-paths": "^5.0.1"
   }
 }
