--- a/contract/package.json
+++ b/contract/package.json
@@ -1,5 +1,31 @@
 {
+  "name": "@hapi/solana-sub-service",
+  "version": "0.1.0",
+  "publishConfig": {
+    "access": "public"
+  },
+  "description": "Client library for subscription contract",
+  "author": "HAPI",
+  "license": "Apache-2.0",
+  "keywords": [
+    "Hapi",
+    "subscription",
+    "cybersecurity",
+    "Solana",
+    "client"
+  ],
+  "main": "out-tsc/lib/index.js",
+  "module": "out-tsc/lib/index.js",
+  "types": "out-tsc/lib/index.d.ts",
+  "files": [
+    "./package.json",
+    "./package-lock.json",
+    "out-tsc/"
+  ],
   "scripts": {
+    "prebuild": "rimraf out-lib out-tsc",
+    "build": "tsc && rollup -c",
+    "prepublishOnly": "npm run build",
     "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
   },
@@ -11,11 +37,24 @@
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.3.0",
-    "@types/mocha": "^9.0.0",
-    "chai": "^4.3.4",
-    "mocha": "^9.0.3",
+    "@types/jest": "^29.5.13",
+    "@types/node": "^22.7.4",
+    "jest": "^29.7.0",
     "prettier": "^2.6.2",
-    "ts-mocha": "^10.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "^4.3.5"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "js",
+      "json"
+    ],
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "/tests/.*\\.spec\\.(ts|tsx)$",
+    "testTimeout": 30000
   }
 }
