--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,7 +43,7 @@
     "vite-plugin-svg": "^0.7.0",
     "vite-plugin-svgr": "4.2.0",
     "zod": "^3.23.8",
-    "zustand": "5.0.0-rc.2"
+    "zustand": "4.5.2"
   },
   "devDependencies": {
     "@types/react": "18.3.3",
