--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   "devDependencies": {
     "@eslint/js": "9.9.0",
     "@types/node": "22.7.4",
-    "@typescript-eslint/eslint-plugin": "^8.8.0",
-    "@typescript-eslint/parser": "^8.8.0",
-    "add": "^2.0.6",
+    "@typescript-eslint/eslint-plugin": "8.8.0",
+    "@typescript-eslint/parser": "8.8.0",
     "eslint": "9.9.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-typescript": "3.6.3",
@@ -17,8 +16,8 @@
     "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-react-hooks": "5.1.0-rc.0",
     "eslint-plugin-react-refresh": "0.4.9",
-    "globals": "^15.9.0",
-    "pnpm": "^9.11.0",
+    "globals": "15.9.0",
+    "pnpm": "9.11.0",
     "prettier": "3.3.3",
     "typescript": "5.5.3",
     "typescript-eslint": "8.0.1"
