--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,15 +21,18 @@
     "@radix-ui/react-slot": "1.1.0",
     "@radix-ui/react-switch": "1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
-    "@solana/spl-token": "^0.4.8",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
+    "@solana/spl-token": "^0.4.8",
     "@solana/wallet-adapter-base": "0.9.23",
     "@solana/wallet-adapter-react": "0.15.35",
     "@solana/wallet-adapter-react-ui": "0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "1.95.3",
     "@tanstack/react-table": "8.20.5",
+    "@types/bn.js": "^5.1.6",
+    "@types/uuid": "^10.0.0",
+    "bn.js": "^5.2.1",
     "buffer": "^6.0.3",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
@@ -44,6 +47,7 @@
     "recharts": "^2.12.7",
     "tailwind-merge": "2.5.2",
     "tailwindcss-animate": "1.0.7",
+    "uuid": "^10.0.0",
     "vite-plugin-node-polyfills": "^0.22.0",
     "vite-plugin-svg": "^0.7.0",
     "vite-plugin-svgr": "4.2.0",
