--- a/contract/programs/contract/Cargo.toml
+++ b/contract/programs/contract/Cargo.toml
@@ -19,3 +19,4 @@ default = []
 anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
 anchor-spl = "0.29.0"
 uuid = "1.10.0"
+ethnum = "1.5.0"
